// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp snapshot 1`] = `
Object {
  "default": undefined,
  "docs": Object {},
  "fqn": "Amazon.CDK.AWS.ECR.AuthorizationToken.parameter.Grantee",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee",
  "optional": undefined,
  "type": Object {
    "fqn": "@aws-cdk/aws-iam.IGrantable",
    "id": "Amazon.CDK.AWS.IAM.IGrantable",
    "name": "IGrantable",
  },
}
`;

exports[`csharp snapshot 2`] = `
" \`Grantee\`<sup>Required</sup> <a id=\\"@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee\\"></a>

- *Type:* <a href=\\"#@aws-cdk/aws-iam.IGrantable\\">IGrantable</a>

---
"
`;

exports[`java snapshot 1`] = `
Object {
  "default": undefined,
  "docs": Object {},
  "fqn": "software.amazon.awscdk.services.ecr.AuthorizationToken.parameter.grantee",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee",
  "optional": undefined,
  "type": Object {
    "fqn": "@aws-cdk/aws-iam.IGrantable",
    "id": "software.amazon.awscdk.services.iam.IGrantable",
    "name": "IGrantable",
  },
}
`;

exports[`java snapshot 2`] = `
" \`grantee\`<sup>Required</sup> <a id=\\"@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee\\"></a>

- *Type:* <a href=\\"#@aws-cdk/aws-iam.IGrantable\\">IGrantable</a>

---
"
`;

exports[`newlines in "defaults" are removed snapshot 1`] = `
Object {
  "default": "default option
with a newline",
  "docs": Object {},
  "fqn": "@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee",
  "optional": undefined,
  "type": Object {
    "fqn": "@aws-cdk/aws-iam.IGrantable",
    "id": "@aws-cdk/aws-iam.IGrantable",
    "name": "IGrantable",
  },
}
`;

exports[`python snapshot 1`] = `
Object {
  "default": undefined,
  "docs": Object {},
  "fqn": "aws_cdk.aws_ecr.AuthorizationToken.parameter.grantee",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee",
  "optional": undefined,
  "type": Object {
    "fqn": "@aws-cdk/aws-iam.IGrantable",
    "id": "aws_cdk.aws_iam.IGrantable",
    "name": "IGrantable",
  },
}
`;

exports[`python snapshot 2`] = `
" \`grantee\`<sup>Required</sup> <a id=\\"@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee\\"></a>

- *Type:* <a href=\\"#@aws-cdk/aws-iam.IGrantable\\">IGrantable</a>

---
"
`;

exports[`typescript snapshot 1`] = `
Object {
  "default": undefined,
  "docs": Object {},
  "fqn": "@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee",
  "id": "@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee",
  "optional": undefined,
  "type": Object {
    "fqn": "@aws-cdk/aws-iam.IGrantable",
    "id": "@aws-cdk/aws-iam.IGrantable",
    "name": "IGrantable",
  },
}
`;

exports[`typescript snapshot 2`] = `
" \`grantee\`<sup>Required</sup> <a id=\\"@aws-cdk/aws-ecr.AuthorizationToken.parameter.grantee\\"></a>

- *Type:* <a href=\\"#@aws-cdk/aws-iam.IGrantable\\">IGrantable</a>

---
"
`;
